fix table overflow

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,20 +7,25 @@
 }
 
 #threeJS {
-    visibility: hidden;
-    position: absolute;
+  visibility: hidden;
+  position: absolute;
 }
 
 #hud {
-    visibility: hidden;
-    font-family: monospace;
-    z-index: 1;
+  visibility: hidden;
+  font-family: monospace;
+  z-index: 1;
 }
 
 #restart {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 canvas {
-    background: linear-gradient(0deg, #FDBB2D 0%, #3A1C71 100%);
+  background: linear-gradient(0deg, #fdbb2d 0%, #3a1c71 100%);
+}
+
+table {
+  margin: 0 auto;
+  overflow: hidden;
 }
